# Hermes

./: .gitignore  AGENTS.md  Makefile  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  gen_doc_images.py  make.bat
docs/source/: 01_basic_example.rst  02_elements.rst  03_layouts.rst  04_header_footer.rst  05_tables.rst  06_fonts.rst  07_themes.rst  api.rst  conf.py  elements.rst  index.rst  quickstart.rst  styles.rst
examples/: alignment_demo.py  basic_report.html  basic_report.pptx  basic_report.py  comprehensive_report.html  comprehensive_report.pptx  comprehensive_report.py  dashboard_report.html  dashboard_report.pptx  dashboard_report.py  docs_basic.html  docs_basic.py  docs_elements.html  docs_elements.py  docs_fonts.html  docs_fonts.py  docs_header_footer.html  docs_header_footer.py  docs_layouts.html  docs_layouts.py  docs_tables.html  docs_tables.py  docs_themes.html  docs_themes.py  engineering_report.html  engineering_report.pptx  engineering_report.py  figure_alignment.py  figure_sizing.py  image_demo.py  named_colors.html  named_colors.py  nested_layouts.html  nested_layouts.pptx  nested_layouts.py  padding_margin.html  padding_margin.pptx  padding_margin.py  prueba.html  prueba.py  (+16 more)
pyreportengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reporting/: __init__.py  background.py  document.py  footer_config.py  layout_config.py  slide.py  slide_type.py  title_config.py
tests/: conftest.py  test_colors.py  test_document.py  test_geometry.py  test_grid.py  test_panel.py  test_sizing.py  test_slide.py  test_table.py
(+51 files in other folders)
